; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/vmcs_host/extr_vc_vchi_cecservice.c_cecservice_wait_for_bulk_receive.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/vmcs_host/extr_vc_vchi_cecservice.c_cecservice_wait_for_bulk_receive.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32* }

@.str = private unnamed_addr constant [49 x i8] c"CEC: NULL buffer passed to wait_for_bulk_receive\00", align 1
@cecservice_client = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@VCHI_FLAGS_BLOCK_UNTIL_OP_COMPLETE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @cecservice_wait_for_bulk_receive to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cecservice_wait_for_bulk_receive(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i8*, i8** %4, align 8
  %7 = call i32 @vcos_verify(i8* %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %11, label %9

9:                                                ; preds = %2
  %10 = call i32 @vc_cec_log_error(i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %3, align 4
  br label %20

11:                                               ; preds = %2
  %12 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @cecservice_client, i32 0, i32 0), align 8
  %13 = getelementptr inbounds i32, i32* %12, i64 0
  %14 = load i32, i32* %13, align 4
  %15 = load i8*, i8** %4, align 8
  %16 = load i32, i32* %5, align 4
  %17 = load i32, i32* @VCHI_FLAGS_BLOCK_UNTIL_OP_COMPLETE, align 4
  %18 = call i32 @vchi_bulk_queue_receive(i32 %14, i8* %15, i32 %16, i32 %17, i32* null)
  %19 = call i32 @vchi2service_status(i32 %18)
  store i32 %19, i32* %3, align 4
  br label %20

20:                                               ; preds = %11, %9
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local i32 @vcos_verify(i8*) #1

declare dso_local i32 @vc_cec_log_error(i8*) #1

declare dso_local i32 @vchi2service_status(i32) #1

declare dso_local i32 @vchi_bulk_queue_receive(i32, i8*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
